ex25-ec-output.txt
Jays-MacBook-Pro:PythonTheHardWay jnewlin$ python
Python 2.7.2 (default, Oct 11 2012, 20:14:37) 
[GCC 4.2.1 Compatible Apple Clang 4.0 (tags/Apple/clang-418.0.60)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> from ex25 import *
>>> sentence = "The quick brown fox jumped over the lazy dog."
>>> word_list = break_words(sentence)
>>> word_list
['The', 'quick', 'brown', 'fox', 'jumped', 'over', 'the', 'lazy', 'dog.']
>>> sorted_word_list =  sort_words(word_list)
>>> sorted_word_list
['The', 'brown', 'dog.', 'fox', 'jumped', 'lazy', 'over', 'quick', 'the']
>>> print_last_word(sentence)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "ex25.py", line 17, in print_last_word
    word = words.pop(-1)
AttributeError: 'str' object has no attribute 'pop'
>>> print_last_word(word_list))
  File "<stdin>", line 1
    print_last_word(word_list))
                              ^
SyntaxError: invalid syntax
>>> print_last_word(word_list)
dog.
>>> word_list
['The', 'quick', 'brown', 'fox', 'jumped', 'over', 'the', 'lazy']
>>> print_last_word(sorted_word_list)
the
>>> print_first_and_last_sorted(word_list)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "ex25.py", line 33, in print_first_and_last_sorted
    words = sort_sentence(sentence)
  File "ex25.py", line 22, in sort_sentence
    words = break_words(sentence)
  File "ex25.py", line 3, in break_words
    words = stuff.split(' ')
AttributeError: 'list' object has no attribute 'split'
>>> print_first_and_last_sorted(sentence)
The
the
>>> 